build_errors_2.txt

> Task :compileJava
/home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/entity/Employement.java:53: warning: @Builder will ignore the initializing expression entirely. If you want the initializing expression to serve as default, add @Builder.Default. If it is not supposed to be settable during building, make the field final.
    private List<Staff> staff = new ArrayList<>();
                        ^
/home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/entity/Employement.java:56: warning: @Builder will ignore the initializing expression entirely. If you want the initializing expression to serve as default, add @Builder.Default. If it is not supposed to be settable during building, make the field final.
    private List<Appointment> appointments = new ArrayList<>();
                              ^
/home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/dto/response/StaffScheduleResponse.java:24: error: incompatible types: UUID cannot be converted to Long
                schedule.getId(),
                              ^
/home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/dto/response/ServiceSummaryResponse.java:18: error: incompatible types: UUID cannot be converted to Long
                employement.getId(),
                                 ^
/home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/dto/response/AppointmentSummaryResponse.java:25: error: incompatible types: UUID cannot be converted to Long
                appointment.getId(),
                                 ^
/home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/service/AppointmentServiceImpl.java:52: error: incompatible types: Long cannot be converted to UUID
        Staff staff = staffRepository.findById(request.staffId())
                                                              ^
/home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/service/AppointmentServiceImpl.java:55: error: incompatible types: Long cannot be converted to UUID
        Employement employement = serviceRepository.findByIdAndTenantId(request.serviceId(), tenantId)
                                                                                         ^
/home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/security/JwtFilter.java:35: error: incompatible types: UUID cannot be converted to Long
                Long userId = service.getUserIdFromToken(jwt);
                                                        ^
/home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/security/JwtFilter.java:37: error: incompatible types: Long cannot be converted to UUID
                UserDetails userDetails = userDetailsService.loadUserByIdForJwt(userId, email);
                                                                                ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: /home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/service/AuthServiceImpl.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
7 errors
2 warnings

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///home/baxti/IdeaProjects/multi-tenant-appointment-system/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  /home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/entity/Employement.java:53: warning: @Builder will ignore the initializing expression entirely. If you want the initializing expression to serve as default, add @Builder.Default. If it is not supposed to be settable during building, make the field final.
      private List<Staff> staff = new ArrayList<>();
                          ^
  /home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/entity/Employement.java:56: warning: @Builder will ignore the initializing expression entirely. If you want the initializing expression to serve as default, add @Builder.Default. If it is not supposed to be settable during building, make the field final.
      private List<Appointment> appointments = new ArrayList<>();
                                ^
  Note: Recompile with -Xlint:deprecation for details.
  /home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/dto/response/StaffScheduleResponse.java:24: error: incompatible types: UUID cannot be converted to Long
                  schedule.getId(),
                                ^
  /home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/dto/response/ServiceSummaryResponse.java:18: error: incompatible types: UUID cannot be converted to Long
                  employement.getId(),
                                   ^
  /home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/dto/response/AppointmentSummaryResponse.java:25: error: incompatible types: UUID cannot be converted to Long
                  appointment.getId(),
                                   ^
  /home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/service/AppointmentServiceImpl.java:52: error: incompatible types: Long cannot be converted to UUID
          Staff staff = staffRepository.findById(request.staffId())
                                                                ^
  /home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/service/AppointmentServiceImpl.java:55: error: incompatible types: Long cannot be converted to UUID
          Employement employement = serviceRepository.findByIdAndTenantId(request.serviceId(), tenantId)
                                                                                           ^
  /home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/security/JwtFilter.java:35: error: incompatible types: UUID cannot be converted to Long
                  Long userId = service.getUserIdFromToken(jwt);
                                                          ^
  /home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/security/JwtFilter.java:37: error: incompatible types: Long cannot be converted to UUID
                  UserDetails userDetails = userDetailsService.loadUserByIdForJwt(userId, email);
                                                                                  ^
  Note: /home/baxti/IdeaProjects/multi-tenant-appointment-system/src/main/java/org/architect/multitenantappointmentsystem/service/AuthServiceImpl.java uses unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use or override a deprecated API.
  Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
  7 errors
  2 warnings

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 5s
1 actionable task: 1 executed
